--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,17 +23,17 @@ services:
       POSTGRES_PASSWORD: password
 
   keycloak:
-    image: jboss/keycloak:16.1.1
+    image: quay.io/keycloak/keycloak:19.0.3
     environment:
-      DB_VENDOR: POSTGRES
+      DB_VENDOR: postgres
       DB_ADDR: postgres
-      DB_DATABASE: keycloak
       DB_USER: keycloak
-      DB_SCHEMA: public
       DB_PASSWORD: password
-      KEYCLOAK_USER: admin
-      KEYCLOAK_PASSWORD: admin
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
     ports:
       - 8080:8080
     depends_on:
       - postgres
+    command:
+      - start-dev
